--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -15,6 +15,7 @@ $base-line-height: 1.4;
 $base-color: #5a5a5a;
 $brand-color: #C01B80;
 $green: #9fce67;
+$dark-green: #28a745;
 $white: #fff;
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
