--- a/templates/blocks/flexslider.html
+++ b/templates/blocks/flexslider.html
@@ -5,7 +5,7 @@
           <div id="testimonials" class="clearfix">
             <h3>{{ this.title }}</h3>
             <!-- flexslider -->
-            <div class="flexslider">
+            <div  id="what_clients_say" class="flexslider">
               <ul class="slides">
                 {% for slide in this.slides.blocks %}
                     {{ slide }}
