--- a/assets/css/_reset.scss
+++ b/assets/css/_reset.scss
@@ -22,6 +22,10 @@ ul li { list-style: none }
 h2{
 	font-weight: $light;
     color: $base-color;
+    text-transform: uppercase;
+}
+h3{
+    text-transform: uppercase;
 }
 p{
     color: $base-color;
