--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,162 +23,15 @@
     <!-- Page Wrapper -->
     <div class="page-wrapper">
 
-      <!-- Site Header -->
-      <div class="site-header">
-        <div class="collapse background-dark" id="navbarHeader">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-8 py-4">
-                <h4 class="text-white">About</h4>
-                <p class="text-muted">This is hidden text in the HTML Build. Is this right?</p>
-              </div>
-              <div class="col-sm-4 py-4">
-                <h4 class="text-white">Contact</h4>
-                <ul class="list-unstyled">
-                  <li><a href="#" class="text-white">Follow on Twitter</a></li>
-                  <li><a href="#" class="text-white">Like on Facebook</a></li>
-                  <li><a href="#" class="text-white">Email me</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div><!-- /.collapse -->
+      {% include 'includes/header.html' %}
 
-
-        <!-- Fullscreen Search -->
-        <div id="myOverlay" class="overlay">
-          <span class="closebtn" onclick="closeSearch()" title="Close Overlay">×</span>
-          <div class="overlay-content">
-            <form action="index.html">
-              <input type="text" placeholder="Search.." name="search">
-              <button type="submit"><i class="fa fa-search"></i></button>
-            </form>
-          </div>
-        </div>
-
-        <!-- Navbar -->
-        <div class="navbar navbar-fixed-top">
-          <div class="container d-flex justify-content-between">
-            <a href="#" class="navbar-brand"><img src="{{ '/img/logo.png'|url }}" alt="" class="img-fluid"></a>
-
-            <a href="#" class="srch_icon" onclick="openSearch()"><img src="{{ '/img/icon_search.png'|url }}" alt=""></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-              <img src="{{ '/img/icon_plus.png'|url }}" alt=""></span>
-            </button>
-          </div>
-        </div>
-       </div> <!-- /.site-header -->
-
-
-      <!-- Banner -->
-      <div class="section-banner">
-        <div class="container">
-          <div class="intro-content">
-            <h1>{{ this.header }}</h1>
-            <h2 class="page-title">{{ this.title }}</h2>
-            <p>{{ this.description }}</p>
-          </div><!-- /.intro-content -->
-        </div><!-- /.container -->
-      </div><!-- /.section-banner -->
-
-      <!-- Body -->
       {% block body %}{% endblock %}
 
-      <!-- Contact -->
-      <div class="section-contact bg-blue">
-        <div class="container">
-          <div class="container-inner">
-            <h2 class="d-none d-sm-block">lorem ipsum dolar sit</h2>
-            <h2 class="d-block d-sm-none">LOOKING FOR NEXT GENERATION solutions?</h2>
-            <form action="#" name="">
-              <div class="d-none d-sm-block">
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <label class="sr-only" for="f_name">First Name</label>
-                      <input type="text" class="form-control" id="f_name" placeholder="First Name">
-                    </div>
-                  </div><!-- /.col-md-6 -->
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <label class="sr-only" for="l_name">Last Name</label>
-                      <input type="text" class="form-control" id="f_name" placeholder="Last Name">
-                    </div>
-                  </div><!-- /.col-md-6 -->
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <label class="sr-only" for="email_address">Email Address</label>
-                      <input type="text" class="form-control" id="email_address" placeholder="Email Address">
-                    </div>
-                  </div><!-- /.col-md-6 -->
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <label class="sr-only" for="phone">Phone Number</label>
-                      <input type="text" class="form-control" id="phone" placeholder="Phone Number">
-                    </div>
-                  </div><!-- /.col-md-6 -->
-                 </div><!-- /.row -->
-               </div><!-- /.d-none /.d-sm-block -->
-               <div class="row">
-                <div class="col-md-12 text-center">
-                   <button type="submit" class="btn btn-success">contact us <i class="fas fa-angle-right"></i></button>
-                </div>
-              </div><!-- /.row -->
-            </form>
-          </div><!-- /.container-inner -->
-        </div><!-- /.container -->
-      </div><!-- /.section-contact -->
+      {% include 'includes/contact.html' %}
 
+      {% include 'includes/footer.html' %}
 
       <!-- Site Footer -->
-      <footer class="site-footer bg-blue">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-4 block-left">
-              <img src="{{ '/img/footer_left_img.png'|url }}" alt="" class="d-none d-sm-block img-fluid">
-            <h3><a href="#">locate us lorem ipsum <img src="{{ '/img/icon_gt.png'|url }}" alt=""></a></h3>
-            </div><!-- /.col-md-4 -->
-            <div class="col-md-8">
-              <div class="row">
-                <div class="col-md-6 order-md-2 newsletter-and-socail-icons">
-                  <!-- Subscribtion Form -->
-                  <div class="subscribtion-form">
-                    <h3>connect with us</h3>
-                    <form action="#">
-                      <div class="fields-wrap">
-                        <input type="text" placeholder="sign up for email updates">
-                        <button type="submit"><img src="{{ '/img/icon_gt.png'|url }}" alt=""></button>
-                      </div>
-                    </form>
-                  </div><!-- /.subscribtion-form -->
-                  <!-- Social Icons -->
-                  <div class="social-icons">
-                    <ul>
-                      <li><a href="#"><i class="fas fa-envelope"></i></a></li>
-                      <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                      <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                      <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    </ul>
-                  </div><!-- /.social-icons -->
-                </div><!-- /.col-md-6/.newsletter-and-socail-icons -->
-                <div class="col-md-6 order-md-1 footer-menu-and-copyright">
-                  <ul>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Careers</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">News & Events</a></li>
-                  </ul>
-                  <p class="copyright">
-                    COPYRIGHT 2018 GENOMONCOLOGY LLC. <br>  ALL RIGHTS RESERVED.
-                  </p>
-                </div><!-- /.col-md-6/.footer-menu-and-copyright -->
-              </div><!-- /.row -->
-            </div><!-- /.col-md-8 -->
-          </div><!-- /.row -->
-        </div><!-- /.container -->
-      </footer><!-- /.site-footer -->
-    </div><!-- /.page-wrapper -->
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
