--- a/templates/page.html
+++ b/templates/page.html
@@ -1,1 +1,24 @@
 {% extends "layout.html" %}
+
+{% block body %}
+
+    <div class="section-banner {{ this.class }}-banner">
+        <div class="container">
+            <div class="intro-content">
+                <h1>{{ this.header }}</h1>
+                <h2 class="page-title">{{ this.title }}</h2>
+                <p>{{ this.description }}</p>
+            </div><!-- /.intro-content -->
+        </div><!-- /.container -->
+    </div><!-- /.section-banner -->
+
+    {% for section in this.sections.blocks %}
+        {{ section }}
+    {% endfor %}
+
+    {% if this.show_clients %}
+        {% include 'includes/clients_served.html' %}
+    {% endif %}
+
+{% endblock %}
+
