Capabilities page with flow blocks for specialized grid.

--- a/templates/page.html
+++ b/templates/page.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <div class="section-banner {{ this.class }}-banner">
+    <div class="section-banner {{ this.class }}-banner {{ this.class }}-banner-section">
         <div class="container">
             <div class="intro-content">
                 <h1>{{ this.header }}</h1>
